--- a/countries/index.html
+++ b/countries/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="main">
       <h1>Find as much as country you know.</h1>
-      <h4>Each character means +1 point. Uppercase-lowercase chars, and spaces are never mind. </h4>
+      <h4>Each single character means +1 point. Uppercase-lowercase chars, and spaces are never mind. (aa-1 point, ab- 2 point) </h4>
       <input type="text" class="inputString">
       <!-- <button onclick="getCountries()">Store</button> -->
       <button onclick="checkTheLocal()">Submit</button>
