--- a/rubikcube/index.html
+++ b/rubikcube/index.html
@@ -40,7 +40,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Amoba</title>
+    <title>Rubik Cube</title>
 <link rel="stylesheet" href="index.css">
   </head>
   <body>
