upper cube moves

--- a/rubikcube/index.html
+++ b/rubikcube/index.html
@@ -105,7 +105,7 @@
     </div>
     <div class="images">
     <img src="right.png" onclick="changeUppLineRight()"/>
-    <img class="rightMiddle" src="right.png"  onclick="changeMidleLineRight()"/>
+    <img src="right.png"  onclick="changeMidleLineRight()"/>
     <img src="right.png" onclick="changeDownLineRight()"/>
   </div>
     </div>
