some bug modified

--- a/rubikcube/index.html
+++ b/rubikcube/index.html
@@ -13,6 +13,11 @@
       <img src="upp.png" onclick="upperRightArrowDown()"/>
     </div>
     <div class="first_section">
+      <div class="images">
+      <img src="left.png"/>
+      <img src="left.png" onclick="lastDMidleLeftMove()"/>
+      <img src="left.png" onclick="lastDLeftMove()"/>
+    </div>
       <div class="first_line">
         <p></p>
         <p></p>
@@ -28,6 +33,11 @@
         <p></p>
         <p></p>
       </div>
+      <div class="images">
+      <img src="right.png"/>
+      <img src="right.png" onclick="lastDMidleRightMove()"/>
+      <img src="right.png" onclick="lastDRightMove()"/>
+    </div>
     </div>
     <div class="second_section">
       <div class="images">
