soon adding the mix button

--- a/rubikcube/index.html
+++ b/rubikcube/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="first_section">
       <div class="images">
-      <img src="left.png"/>
+      <img src="left.png" onclick="lastDUpperToLeft()"/>
       <img src="left.png" onclick="lastDMidleLeftMove()"/>
       <img src="left.png" onclick="lastDLeftMove()"/>
     </div>
@@ -34,7 +34,7 @@
         <p></p>
       </div>
       <div class="images">
-      <img src="right.png"/>
+      <img src="right.png" onclick="lastDUpperToRight()"/>
       <img src="right.png" onclick="lastDMidleRightMove()"/>
       <img src="right.png" onclick="lastDRightMove()"/>
     </div>
