all button with all function added

--- a/rubikcube/index.html
+++ b/rubikcube/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <button onclick="localStorage.clear(), location.reload()">New Game</button>
+    <button onclick="mixIt ()">Mix it</button>
     <div class="main">
       <div class="images_upp_down">
       <img src="upp.png" onclick="upperLeftArrowDown()"/>
