--- a/rubikcube/index.html
+++ b/rubikcube/index.html
@@ -3,10 +3,11 @@
   <head>
     <title>Rubik Cube</title>
 <link rel="stylesheet" href="index.css">
+<link rel="icon" href="rubiks.gif">
   </head>
   <body>
     <button onclick="localStorage.clear(), location.reload()">New Game</button>
-    <button onclick="mixIt ()">Mix it</button>
+    <button onclick="mixIt()">Mix it</button>
     <div class="main">
       <div class="images_upp_down">
       <img src="upp.png" onclick="upperLeftArrowDown()"/>
