--- a/cvfabicsp/index.html
+++ b/cvfabicsp/index.html
@@ -9,6 +9,7 @@
     <link href="./css/edu.css" rel="stylesheet">
     <link href="./css/skills.css" rel="stylesheet">
     <link href="./css/contact.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="./pictures/hi.png"/>
     <title>CV FP</title>
   </head>
   <body>
@@ -250,7 +251,7 @@
         </div>
         <div class="tile contact">
           <h1>Contact me:</h1>
-          <div class="inner contact">
+          <div class="innercontact">
             <form id="myform" method="post">
             <label for="email">Your e-mail</label>
             <input class="from_email" type="email" name="from_name" />
