--- a/cvfabicsp/index.html
+++ b/cvfabicsp/index.html
@@ -255,13 +255,10 @@
             <form id="myform" method="post">
             <label for="email">Your e-mail</label>
             <input class="from_email" type="email" name="from_name" />
-            <!-- <label>Your e-mail</label>
-            <input type="text" name="reply_to" /> -->
             <label>Your name</label>
             <input class="yourname" type="text" name="to_name" />
             <label>Comment</label>
             <textarea  class="user_comment" type="text" name="message_html"></textarea>
-            <!-- <input class="user_comment" type="text" name="message_html" /> -->
             <br><br>
             <button>
             Send
@@ -271,10 +268,10 @@
               Please complette all field to send an e-mail!
             </p>
             </form>
-          </div><!-- End Inner -->
+          </div>
         </div>
       </div>
-    <!-- </div> -->
+
   </body>
   <script type="text/javascript" src="script.js"></script>
   <script type="text/javascript" src="email.js"></script>
