--- a/cvfabicsp/index.html
+++ b/cvfabicsp/index.html
@@ -224,11 +224,11 @@
             <div class="innercontact">
                <form id="myform" method="post">
                   <label for="email">Your e-mail</label>
-                  <input class="from_email" type="email" name="from_name" />
+                  <input class="from_email" placeholder="Your E-mail adress" type="email" name="from_name" />
                   <label>Your name</label>
-                  <input class="yourname" type="text" name="to_name" />
+                  <input class="yourname" placeholder="Your name" type="text" name="to_name" />
                   <label>Comment</label>
-                  <textarea  class="user_comment" type="text" name="message_html"></textarea>
+                  <textarea  class="user_comment" placeholder="Your comment here" type="text" name="message_html"></textarea>
                   <br><br>
                   <button>
                   Send
